namespace java com.igool.rpc.db.model.thrift
struct FindRegister {
        1:i32 id,
        2:i32 userId,
        3:string createTime,
        4:string unitName,
        5:string letSfz,
        6:i32 type,
        7:string carSfz,
        8:string hphm,
        9:string hpzl
	}